--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <script src="./js/jquery-3.6.0.min.js"></script>
     <title>PET SHOP</title>
 </head>
 <body>
@@ -22,11 +23,11 @@
                 </h1>
                 <div class="Bottom--Container--Right">
                     <ul>
-                        <li><a href="#">HOME</a></li>
-                        <li><a href="#">ABOUT</a></li>
-                        <li><a href="#">PRODUCTS</a></li>
-                        <li><a href="#">TEAM</a></li>
-                        <li><a href="#">CONTACT</a></li>
+                        <li><a id="HomeButton" href="#">HOME</a></li>
+                        <li><a id="AboutButton" href="#">ABOUT</a></li>
+                        <li><a id="ProductsButton" href="#">PRODUCTS</a></li>
+                        <li><a id="TeamButton" href="#">TEAM</a></li>
+                        <li><a id="ContactButton" href="#">CONTACT</a></li>
                         <li><a href="#"><img src="./images/icon_search.png"></a></li>
                         <li><a href="#"><img src="./images/icon_cart.png"></a></li>
                     </ul>
@@ -264,28 +265,28 @@
                     <div class="Contact__Infomation">
                         <div class="Contact__Infomation--Title">CONTACT US</div>
                         <div class="Contact__Infomation--Container">
-                            <form action="">
+                            <form name="form__contact" id="form__contact" action="#">
                                 <div>
                                     <label for="">名前</label>
-                                    <input placeholder="Thanh Cong">
+                                    <input placeholder="Thanh Cong" type="text" id="name__contact" name="name__contact">
                                 </div>
                                 <div>
                                     <label for="">メールアドレス</label>
-                                    <input placeholder="congnguyen@gmail.com">
+                                    <input placeholder="congnguyen@gmail.com" type="email" id="email__contact" name="email__contact">
                                 </div>
                                 <div>
                                     <label for="">電話番号</label>
-                                    <input placeholder="08021238888">
+                                    <input placeholder="08021238888" type="text" id="fontnumber__contact" name="fontnumber__contact">
                                 </div>
                                 <div>
                                     <label for="">問い合わせ</label>
                                     <textarea placeholder="Your Message"></textarea>
                                 </div>
+                                <div style="display: none; color: rgb(185, 0, 0);" class="errorMessage">情報を完全に記入してください</div>
                                 <div class="Contact__ResetAndSubmit">
-                                    <input type="reset" value="リセット"></input>
-                                    <input type="submit" value="送信"></input>
+                                    <input id="resetForm" type="reset" value="リセット">
+                                    <input type="submit" value="送信">
                                 </div>
-
                             </form>
                         </div>
                     </div>
@@ -391,8 +392,7 @@
 
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    
+    <script src="./js/custom.js"></script>
 </body>
 </html>
