add update js and html

--- a/index.html
+++ b/index.html
@@ -202,6 +202,34 @@
                 </div>
             </div>
             <div class="Team__Slide--Container">
+                <div class="Container__img"><img src="https://yt3.ggpht.com/ytc/AKedOLReV4QUqo89d7h8XsVgn0do748HE_fv_tgjjk6r6Q=s900-c-k-c0x00ffffff-no-rj"></div>
+                <h4>MINH NGHI</h4>
+                <h5>Full-time employee</h5>
+                <p>現在、営業担当者として働いています</p>
+                <div class="Container__Item">
+                    <ul>
+                        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="Team__Slide--Container">
+                <div class="Container__img"><img src="https://vcdn-giaitri.vnecdn.net/2021/03/10/minh-hang-1-1231-1615373506.jpg"></div>
+                <h4>MINH HANG</h4>
+                <h5>Full-time employee</h5>
+                <p>現在、営業担当者として働いています</p>
+                <div class="Container__Item">
+                    <ul>
+                        <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                        <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="Team__Slide--Container">
                 <div class="Container__img"><img src="https://cafefcdn.com/thumb_w/650/203337114487263232/2020/12/28/photo1609125040878-1609125041101130810809.jpg"></div>
                 <h4>PHAM NHAT VUONG</h4>
                 <h5>Investor</h5>
