--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./images/logo.png">
-    <link rel="stylesheet" href="./PetDog.css">
-    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" id="getLinkCss" href="./Css/CssOption1.css">
+    <link rel="stylesheet" href="./Css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
@@ -28,6 +28,14 @@
                         <li><a id="ProductsButton" href="#products">PRODUCTS</a></li>
                         <li><a id="TeamButton" href="#team">TEAM</a></li>
                         <li><a id="ContactButton" href="#contact">CONTACT</a></li>
+                        <li id="ChangeButton">
+                            <i id="ChangeLogo" class="fas fa-cogs"></i>
+                            <div id="ChangeContainer">
+                                <button class="blockcolor" id="option1" type="button" onclick="ChangeColor('./Css/CssOption1.css')"></button>
+                                <button class="blockcolor" id="option2" type="button" onclick="ChangeColor('./Css/CssOption2.css')"></button>
+                                <button class="blockcolor" id="option3" type="button" onclick="ChangeColor('./Css/CssOption3.css')"></button>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
