--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <div class="Team__Slide--Container">
                 <div class="Container__img"><img src="./images/yuamikami.jpg"></div>
                 <h4>YUA MIKAMI</h4>
-                <h5>Full-time employee</h5>
+                <h5>正社員</h5>
                 <p>現在、営業担当者として働いています</p>
                 <div class="Container__Item">
                     <ul>
@@ -119,7 +119,7 @@
             <div class="Team__Slide--Container">
                 <div class="Container__img"><img src="https://yt3.ggpht.com/ytc/AKedOLReV4QUqo89d7h8XsVgn0do748HE_fv_tgjjk6r6Q=s900-c-k-c0x00ffffff-no-rj"></div>
                 <h4>MINH NGHI</h4>
-                <h5>Full-time employee</h5>
+                <h5>正社員</h5>
                 <p>現在、営業担当者として働いています</p>
                 <div class="Container__Item">
                     <ul>
@@ -133,7 +133,7 @@
             <div class="Team__Slide--Container">
                 <div class="Container__img"><img src="https://vcdn-giaitri.vnecdn.net/2021/03/10/minh-hang-1-1231-1615373506.jpg"></div>
                 <h4>MINH HANG</h4>
-                <h5>Full-time employee</h5>
+                <h5>正社員</h5>
                 <p>現在、営業担当者として働いています</p>
                 <div class="Container__Item">
                     <ul>
@@ -147,8 +147,8 @@
             <div class="Team__Slide--Container">
                 <div class="Container__img"><img src="https://cafefcdn.com/thumb_w/650/203337114487263232/2020/12/28/photo1609125040878-1609125041101130810809.jpg"></div>
                 <h4>PHAM NHAT VUONG</h4>
-                <h5>Investor</h5>
-                <p>現在、1年生大原簿記公務員医療ビジネス専門学校津田沼校</p>
+                <h5>取締役</h5>
+                <p>2021年に株式会社 PET SHOPを創った人です。</p>
                 <div class="Container__Item">
                     <ul>
                         <li><a href="https://www.facebook.com/street.ub/"><i class="fab fa-facebook"></i></a></li>
